force-app/main/default/objects/DRE__DRE_Action__mdt/DRE__DRE_Action__mdt.object-meta.xml
<CustomObject>
    <label>DRE Action</label>
    <pluralLabel>DRE Actions</pluralLabel>
</CustomObject>