force-app/main/default/objects/DRE__DRE_Action__mdt/fields/DRE__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>DRE__Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>