force-app/main/default/objects/DRE__DRE_Action__mdt/fields/DRE__Object_Source__c.field-meta.xml
<CustomField>
    <fullName>DRE__Object_Source__c</fullName>
    <description>Limits selection of objects this Action can apply to</description>
    <label>Object Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Filtered Only</fullName>
            </value>
            <value>
                <fullName>Record Only</fullName>
            </value>
            <value>
                <fullName>Filtered Except Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>