force-app/main/default/objects/DRE__DRE_Action__mdt/fields/DRE__Requires_Attributes__c.field-meta.xml
<CustomField>
    <fullName>DRE__Requires_Attributes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Attributes</label>
    <type>Checkbox</type>
</CustomField>