force-app/main/default/objects/DRE__DRE_Action__mdt/fields/DRE__Type__c.field-meta.xml
<CustomField>
    <fullName>DRE__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
                <default>true</default>
                <label>Automation</label>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Roll-Up Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>