force-app/main/default/objects/DRE__DRE_Action__mdt/listViews/DRE__All.listView-meta.xml
<ListView>
    <fullName>DRE__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DRE__Apex_Class_Name__c</columns>
    <columns>DRE__Description__c</columns>
    <columns>DRE__Type__c</columns>
    <columns>DRE__Requires_Attributes__c</columns>
    <columns>DRE__IsScopable__c</columns>
    <columns>DRE__Object_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>